sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:6: error: not found: value getNombreValeurs
  var len=getNombreValeurs()-1
          ^